# Practica4-VisionComputador

./: .gitignore  Entrenamiento-Yolo.ipynb  practica.py  transform.py  xd.py
C++/: CMakeLists.txt  main.cpp
